--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
     "sass": "^1.42.1"
   },
