--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "next": "11.1.2",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "sass": "^1.42.1"
   },
   "devDependencies": {
