--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NEXT_PUBLIC_TYPE=local next dev",
+    "dev:local": "NEXT_PUBLIC_TYPE=local next dev",
     "build": "next build",
+    "build:prod": "NEXT_PUBLIC_TYPE=prod next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "next": "11.1.2",
