--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "cookie": "^0.4.1",
+    "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
