--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
+    "draft-js": "^0.11.7",
     "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
