--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^30.0.0",
-    "@ckeditor/ckeditor5-react": "^3.0.3",
     "@reduxjs/toolkit": "^1.6.2",
+    "@tiptap/react": "^2.0.0-beta.81",
+    "@tiptap/starter-kit": "^2.0.0-beta.123",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
-    "draft-js": "^0.11.7",
     "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
+    "react-editor-js": "^1.10.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "rich-markdown-editor": "^11.18.6",
     "sass": "^1.42.1"
   },
   "devDependencies": {
