--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
-    "react-editor-js": "^1.10.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "rich-markdown-editor": "^11.18.6",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
