--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
+    "react-markdown": "^7.0.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "rich-markdown-editor": "^11.18.6",
