--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^5.3.0",
     "rich-markdown-editor": "^11.18.6",
     "sass": "^1.42.1",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "swiper": "^7.0.8"
   },
   "devDependencies": {
     "eslint": "7.32.0",
