--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
     "js-cookie": "^3.0.1",
+    "knex": "^0.95.11",
     "lodash": "^4.17.21",
     "next": "11.1.2",
+    "objection": "^2.2.17",
+    "pg": "^8.7.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
