настроил подключение к БД

--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NEXT_PUBLIC_TYPE=local next dev -p 3500",
+    "dev:front": "NEXT_PUBLIC_TYPE=local next dev -p 3500",
+    "dev:back2": "nodemon server/index.js",
+    "dev:back": "nodemon --exec ts-node server/index.ts",
     "dev:local": "NEXT_PUBLIC_TYPE=local next dev",
     "build": "next build",
     "build:prod": "NEXT_PUBLIC_TYPE=prod next build",
     "start": "next start",
     "lint": "next lint",
     "migrate": "node scripts/migrate.js",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "knex": "./node_modules/.bin/knex --knexfile server/database/knexfile.ts"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
@@ -20,6 +23,8 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "js-cookie": "^3.0.1",
     "knex": "^0.95.11",
     "lodash": "^4.17.21",
@@ -35,11 +40,31 @@
     "react-router-dom": "^5.3.0",
     "rich-markdown-editor": "^11.18.6",
     "sass": "^1.42.1",
+    "sqlite3": "^5.0.2",
     "styled-components": "^5.3.1",
-    "swiper": "^7.0.8"
+    "swiper": "^7.0.8",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "@babel/eslint-parser": "^7.15.8",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.2",
+    "@types/uuid": "^8.3.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^6.1.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "nodemon": "^2.0.14",
+    "prettier": "^2.4.1",
+    "ts-node": "^10.3.1",
+    "typescript": "^4.4.4"
   }
 }
