--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:front": "NEXT_PUBLIC_TYPE=local next dev -p 3500",
+    "dev:back": "nodemon server/index.ts",
+    "build:back": "tsc",
     "dev:back2": "nodemon server/index.js",
-    "dev:back": "nodemon --exec ts-node server/index.ts",
+    "dev:back3": "nodemon --exec ts-node server/index.ts",
     "dev:local": "NEXT_PUBLIC_TYPE=local next dev",
+    "dev:front": "NEXT_PUBLIC_TYPE=local next dev -p 3500",
     "build": "next build",
     "build:prod": "NEXT_PUBLIC_TYPE=prod next build",
     "start": "next start",
+    "start:back": "node build/index.js",
     "lint": "next lint",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
