--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "js-cookie": "^3.0.1",
