--- a/front/package.json
+++ b/front/package.json
@@ -26,7 +26,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.5",
     "react-markdown": "^7.0.1",
+    "react-markdown-editor-lite": "^1.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "rich-markdown-editor": "^11.18.6",
