--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "js-cookie": "^3.0.1",
     "knex": "^0.95.11",
     "lodash": "^4.17.21",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.1.7",
     "@types/node": "^16.11.2",
     "@types/uuid": "^8.3.1",
     "babel-eslint": "^10.1.0",
