--- a/back/package.json
+++ b/back/package.json
@@ -13,9 +13,13 @@
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
     "knex2": "./node_modules/.bin/knex --knexfile src/database/knexfile.ts",
-    "knex": "./node_modules/.bin/knex --knexfile ./knexfile.ts"
+    "knex": "./node_modules/.bin/knex --knexfile ./knexfile.ts",
+    "knex:migrate": "./node_modules/.bin/knex --knexfile ./knexfile.ts migrate:latest",
+    "knex:seed": "./node_modules/.bin/knex --knexfile ./knexfile.ts seed:run",
+    "knex:init": "npm run knex:migrate; npm run knex:seed"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "axios": "^0.22.0",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
@@ -25,10 +29,12 @@
     "js-cookie": "^3.0.1",
     "knex": "^0.95.11",
     "lodash": "^4.17.21",
+    "multer": "^1.4.3",
     "objection": "^2.2.17",
     "pg": "^8.7.1",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
