--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "./src",
     "downlevelIteration": false,
     "strict": true,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
@@ -21,6 +21,6 @@
     "forceConsistentCasingInFileNames": true,
     "strictPropertyInitialization": false
   },
-  "exclude": ["node_modules/"],
+  "exclude": ["src/node_modules"],
   "include": ["src/**/*.ts", "knexfile.ts"]
 }
