--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "build:prod": "NEXT_PUBLIC_TYPE=prod next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "node_modules/.bin/eslint \"**/*.jsx\" --fix"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
@@ -20,6 +20,7 @@
     "cookie": "^0.4.1",
     "dotenv": "^10.0.0",
     "js-cookie": "^3.0.1",
+    "lint": "^0.7.0",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
