--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/index.ts",
+    "dev:prod": "NODE_ENV=production nodemon src/index.ts",
     "build": "tsc",
     "dev:back2": "nodemon server/index.js",
     "dev:back3": "nodemon --exec ts-node src/index.ts",
@@ -15,7 +16,9 @@
     "knex2": "./node_modules/.bin/knex --knexfile src/database/knexfile.ts",
     "knex": "./node_modules/.bin/knex --knexfile ./knexfile.ts",
     "knex:migrate": "./node_modules/.bin/knex --knexfile ./knexfile.ts migrate:latest",
+    "knex:migrate:pg": "NODE_ENV=production ./node_modules/.bin/knex --knexfile ./knexfile.ts migrate:latest",
     "knex:seed": "./node_modules/.bin/knex --knexfile ./knexfile.ts seed:run",
+    "knex:seed:pg": "NODE_ENV=production ./node_modules/.bin/knex --knexfile ./knexfile.ts seed:run",
     "knex:init": "npm run knex:migrate; npm run knex:seed"
   },
   "dependencies": {
