--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "NEXT_PUBLIC_TYPE=local next dev -p 3500",
     "dev:local": "NEXT_PUBLIC_TYPE=local next dev",
+    "dev:dev": "NEXT_PUBLIC_TYPE=dev next dev",
     "build": "next build",
     "build:prod": "NEXT_PUBLIC_TYPE=prod next build",
     "start": "next start",
