--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./build",
     "downlevelIteration": false,
     "strict": true,
+    "rootDir": "./src",
     // "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
