--- a/front/package.json
+++ b/front/package.json
@@ -7,8 +7,10 @@
     "dev:local": "NEXT_PUBLIC_TYPE=local next dev",
     "dev:dev": "NEXT_PUBLIC_TYPE=dev next dev  -p 3500",
     "build": "next build",
+    "build:dev": "NEXT_PUBLIC_TYPE=dev next build",
     "build:prod": "NEXT_PUBLIC_TYPE=prod next build",
-    "start": "next start",
+    "start": "NEXT_PUBLIC_TYPE=local next start",
+    "start:dev": "NEXT_PUBLIC_TYPE=dev next start",
     "lint": "node_modules/.bin/eslint \"**/*.jsx\" --fix"
   },
   "dependencies": {
