--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -13,6 +13,21 @@ services:
     networks:
       - geo_net
     restart: always
+  pgadmin:
+    links:
+      - postgres:postgres
+    container_name: pgadmin
+    image: dpage/pgadmin4:6
+    ports:
+      - ${PGADMIN_PORT}:80
+    volumes:
+      - /data/pgadmin:/root/.pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
+    networks:
+      - geo_net
 networks:
   geo_net:
     driver: bridge
