add user role and migrations

--- a/back/package.json
+++ b/back/package.json
@@ -13,8 +13,8 @@
     "lint": "next lint",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
-    "knex2": "./node_modules/.bin/knex --knexfile src/database/knexfile.ts",
-    "knex": "./node_modules/.bin/knex --knexfile ./knexfile.ts",
+    "knex": "./node_modules/.bin/knex --knexfile src/database/knexfile.ts",
+    "knex2": "./node_modules/.bin/knex --knexfile ./knexfile.ts",
     "knex:migrate": "./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts migrate:latest",
     "knex:migrate:pg": "NODE_ENV=production ./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts migrate:latest",
     "knex:seed": "./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts seed:run",
