--- a/back/package.json
+++ b/back/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "NODE_ENV=development nodemon src/index.ts",
     "dev:prod": "NODE_ENV=production nodemon src/index.ts",
     "build": "tsc",
     "dev:back2": "nodemon server/index.js",
     "dev:back3": "nodemon --exec ts-node src/index.ts",
     "dev:local": "NEXT_PUBLIC_TYPE=local next dev",
+    "start:dev": "node build/index.js",
     "start": "NODE_ENV=production node build/index.js",
     "lint": "next lint",
     "migrate": "node scripts/migrate.js",
@@ -16,10 +17,11 @@
     "knex": "./node_modules/.bin/knex --knexfile src/database/knexfile.ts",
     "knex2": "./node_modules/.bin/knex --knexfile ./knexfile.ts",
     "knex:migrate": "./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts migrate:latest",
-    "knex:migrate:pg": "NODE_ENV=production ./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts migrate:latest",
+    "knex:migrate:prod": "NODE_ENV=production ./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts migrate:latest",
     "knex:seed": "./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts seed:run",
-    "knex:seed:pg": "NODE_ENV=production ./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts seed:run",
-    "knex:init": "npm run knex:migrate; npm run knex:seed"
+    "knex:seed:prod": "NODE_ENV=production ./node_modules/.bin/knex --knexfile ./src/database/knexfile.ts seed:run",
+    "knex:init": "npm run knex:migrate; npm run knex:seed",
+    "knex:init:prod": "npm run knex:migrate:prod; npm run knex:seed:prod"
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
