--- a/back/.env
+++ b/back/.env
@@ -11,3 +11,4 @@ PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_LISTEN_PORT=80
 PGADMIN_PORT=8080
+SECRET=testSecret
