--- a/back/.env.template
+++ b/back/.env.template
@@ -11,4 +11,6 @@ PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
 PGADMIN_LISTEN_PORT=80
 PGADMIN_PORT=8080
+SMTP_TO_EMAIL=
+SMTP_TO_PASSWORD=
 SECRET=
