--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.4",
     "axios": "^0.22.0",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "knex": "^0.95.11",
     "lodash": "^4.17.21",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.2",
     "objection": "^2.2.17",
     "pg": "^8.7.1",
     "sqlite3": "^5.0.2",
