--- a/front/package.json
+++ b/front/package.json
@@ -38,7 +38,8 @@
     "rich-markdown-editor": "^11.18.6",
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
-    "swiper": "^7.0.8"
+    "swiper": "^7.0.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
