--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:14.17-alpine
-WORKDIR /usr/app/
+WORKDIR /app/
 COPY package*.json ./
+COPY tsconfig.json ./
+COPY .env ./
 RUN npm install
 EXPOSE 4000
-CMD npm run dev:back
+CMD npm run dev
