--- a/back/docker-compose.dev.yml
+++ b/back/docker-compose.dev.yml
@@ -32,12 +32,12 @@ services:
   #   networks:
   #     - geo_net
   node:
-    ports:
-      - ${PORT}:${PORT}
-    env_file:
-      - ./.env
-    networks:
-      - geo_net
-networks:
-  geo_net:
-    driver: bridge
+    build:
+      context: .
+      args:
+        NODE_ENV: development
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./src/:/app/src/
+    command: npm run dev
