--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -21,5 +21,5 @@
     "forceConsistentCasingInFileNames": true,
     "strictPropertyInitialization": false
   },
-  "exclude": ["src/node_modules"],
+  "exclude": ["src/node_modules"]
 }
