--- a/front/docker-compose.yml
+++ b/front/docker-compose.yml
@@ -7,3 +7,8 @@ services:
       - ${PORT}:${PORT}
     env_file:
       - ./.env
+    networks:
+      - geo_net
+networks:
+  geo_net:
+    driver: bridge
