--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,18 @@ services:
   #     PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
   #   networks:
   #     - geo_net
+  proxy:
+    image: nginx:1.20
+    container_name: proxy
+    depends_on:
+      - node
+      - nextjs
+    volumes:
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 3080:80
+    networks:
+      - geo_net
   node:
     container_name: back
     restart: always
