--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,36 +1,8 @@
 version: '3'
 services:
-  # postgres:
-  #   container_name: geo__db
-  #   image: postgres:14.0
-  #   ports:
-  #     - ${POSTGRES_PORT}:${POSTGRES_PORT}
-  #   volumes:
-  #     - /tmp/pgdata:/var/lib/postgresql/data
-  #   environment:
-  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-  #     POSTGRES_PORT: ${POSTGRES_PORT}
-  #     POSTGRES_USER: ${POSTGRES_USER}
-  #     POSTGRES_DB: ${POSTGRES_DB}
-  #     PGDATA: ${PGDATA}
-  #   networks:
-  #     - geo_net
-  #   restart: always
-  # pgadmin:
-  #   links:
-  #     - postgres:postgres
-  #   container_name: pgadmin
-  #   image: dpage/pgadmin4:6
-  #   ports:
-  #     - ${PGADMIN_PORT}:80
-  #   volumes:
-  #     - /data/pgadmin:/root/.pgadmin
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-  #     PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
-  #   networks:
-  #     - geo_net
+  proxy:
+    volumes:
+      - ./proxy/dev/nginx.conf:/etc/nginx/nginx.conf
   node:
     build:
       context: ./back
@@ -40,7 +12,7 @@ services:
       - NODE_ENV=development
     volumes:
       - ./back/src/:/app/src/
-      - ./data/dev.sqlite3/:/app/src/database/dev.sqlite3
+      - ./db/:/app/db/
     command: npm run dev
   nextjs:
     build:
