--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "dev:prod": "NODE_ENV=production nodemon src/index.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.production.json",
     "start:dev": "node build/index.js",
     "start": "NODE_ENV=production node build/index.js",
     "lint": "next lint",
@@ -13,6 +13,9 @@
     "migrate": "DB_PATH='../../db/' knex --knexfile build/database/knexfile.js migrate:latest"
   },
   "dependencies": {
+    "@sentry/integrations": "^6.17.4",
+    "@sentry/node": "^6.17.4",
+    "@sentry/tracing": "^6.17.4",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.22.0",
