--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
       - NODE_ENV=development
     volumes:
       - ./back/src/:/app/src/
-      - ./db/:/app/db/
+      - ./data/:/app/data/
     command: npm run dev
   nextjs:
     build:
