создание арзива с картинками на беке и доступ на фронте

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     volumes:
       - ./back/images/:/app/images/
       - ./data/:/app/data/
+      - ./backup/:/app/backup/
   nextjs:
     container_name: front
     restart: on-failure
