--- a/back/package.json
+++ b/back/package.json
@@ -16,10 +16,12 @@
     "@sentry/integrations": "^6.17.4",
     "@sentry/node": "^6.17.4",
     "@sentry/tracing": "^6.17.4",
+    "@types/cookie": "^0.4.1",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
+    "adm-zip": "^0.5.9",
     "axios": "^0.22.0",
-    "cookie": "^0.4.1",
+    "cookie": "^0.4.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -37,6 +39,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.34",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.1.7",
