--- a/proxy/dev/nginx.conf
+++ b/proxy/dev/nginx.conf
@@ -30,6 +30,15 @@ http {
       proxy_cache_bypass $http_upgrade;
     }
 
+    location /files {
+      proxy_pass http://node:5000;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+    }
+
     location / {
       proxy_pass http://nextjs:3500;
       proxy_set_header X-Forwarded-For $remote_addr;
