chaged back confug add props to .env, change package env, add props to CONFIG

--- a/back/.env.template
+++ b/back/.env.template
@@ -1,17 +1,35 @@
-NODE_ENV=
 PORT=5000
-POSTGRES_PORT=5432
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_HOST=localhost
+
+POSTGRES_PORT
+POSTGRES_USER
+POSTGRES_PASSWORD
+POSTGRES_DB
+POSTGRES_HOST
+
 PGDATA=/tmp/pgdata
 PGDATA2=/var/lib/postgresql/data
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
-PGADMIN_LISTEN_PORT=80
-PGADMIN_PORT=8080
-SMTP_TO_EMAIL=
-SMTP_TO_PASSWORD=
-SECRET=
-SENTRY_DSN=
+
+PGADMIN_DEFAULT_EMAI
+PGADMIN_DEFAULT_PASSWORD
+PGADMIN_LISTEN_PORT
+PGADMIN_PORT
+
+SMTP_HOST
+SMTP_PORT
+SMTP_LOGIN
+SMTP_PASSWORD
+SMTP_TEST_MAIL_ADDRESS
+
+SECRET=testSecret
+
+SENTRY_DSN=https://8c8052cf363946099b823b0710735a0b@o515086.ingest.sentry.io/6183533
+
+BACKUP_FOLDER=backup
+BACKUP_IMAGES_FOLDER=backup/images
+BACKUP_DB_FOLDER=backup/
+IMAGES_FOLDER_PATH=data/images
+DB_PATH=data/db/
+DB_NAME=db.sqlite3
+
+ADMIN_LOGIN
+ADMIN_PASSW
