change db creating add automigrations and admin creating add variables with pathes

--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     networks:
       - geo_net
     volumes:
-      - ./images/:/app/images/
+      - ../data/:/app/data/
 networks:
   geo_net:
     driver: bridge
