--- a/proxy/dev/nginx.conf
+++ b/proxy/dev/nginx.conf
@@ -3,6 +3,7 @@ worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
+
 events {
   worker_connections 1024;
 }
@@ -11,6 +12,7 @@ http {
   server {
     listen 80;
     server_name localhost 127.0.0.1;
+    client_max_body_size 10M;
 
     location /api {
       proxy_pass http://node:5000;
