--- a/proxy/prod/nginx.conf
+++ b/proxy/prod/nginx.conf
@@ -11,6 +11,7 @@ http {
   server {
     listen 80;
     server_name localhost 127.0.0.1;
+    client_max_body_size 10M;
 
     location /api {
       proxy_pass http://node:5000;
