--- a/proxy/prod/nginx.conf
+++ b/proxy/prod/nginx.conf
@@ -31,16 +31,16 @@ http {
       proxy_cache_bypass $http_upgrade;
     }
 
-    location /pgadmin {
-      proxy_pass http://pgadmin:80;
-      proxy_redirect http:// $scheme://;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
-      proxy_set_header Host $host;
-      proxy_cache_bypass $http_upgrade;
-      proxy_set_header X-Script-Name /pgadmin;
-    }
+    # location /pgadmin {
+    #   proxy_pass http://pgadmin:80;
+    #   proxy_redirect http:// $scheme://;
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade $http_upgrade;
+    #   proxy_set_header Connection 'upgrade';
+    #   proxy_set_header Host $host;
+    #   proxy_cache_bypass $http_upgrade;
+    #   proxy_set_header X-Script-Name /pgadmin;
+    # }
 
     location / {
       proxy_pass http://nextjs:3500;
