--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,44 +1,13 @@
 version: '3'
 services:
-  # postgres:
-  #   container_name: postgres
-  #   image: postgres:14.0
-  #   ports:
-  #     - ${POSTGRES_PORT}:${POSTGRES_PORT}
-  #   # volumes:
-  #   #   - /tmp/pgdata:/var/lib/postgresql/data
-  #   environment:
-  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-  #     POSTGRES_PORT: ${POSTGRES_PORT}
-  #     POSTGRES_USER: ${POSTGRES_USER}
-  #     POSTGRES_DB: ${POSTGRES_DB}
-  #     PGDATA: ${PGDATA}
-  #   networks:
-  #     - geo_net
-  #   restart: on-failure
-  #   env_file: ./back/.env
-  # pgadmin:
-  #   links:
-  #     - postgres
-  #   depends_on:
-  #     - postgres
-  #   container_name: pgadmin
-  #   image: dpage/pgadmin4:6
-  #   env_file: .env
-  #   ports:
-  #      - 5050:80
-  #   volumes:
-  #     - /data/pgadmin:/root/.pgadmin
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-  #     PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
-  #   restart: on-failure
-  #   networks:
-  #     - geo_net
   proxy:
     volumes:
       - ./proxy/prod/nginx.conf:/etc/nginx/nginx.conf
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+    ports:
+      - 80:80
+      - 443:443
   node:
     build:
       context: ./back
@@ -54,6 +23,26 @@ services:
     environment:
       - NODE_ENV=production
     command: npm start
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - www-html:/var/www/html
+    depends_on:
+      - proxy
+    command: certonly --webroot --webroot-path=/var/www/html --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email --staging -d geoconect.ru  -d www.geoconect.ru
+volumes:
+  certbot-etc:
+  certbot-var:
+  www-html:
+  # web-root:
+  #   driver: local
+  #   driver_opts:
+  #     type: none
+  #     device: /home/sammy/node_project/views/
+  #     o: bind
 networks:
   geo_net:
     driver: bridge
