--- a/proxy/prod/nginx.conf
+++ b/proxy/prod/nginx.conf
@@ -13,6 +13,8 @@ http {
     server_name localhost 127.0.0.1;
     client_max_body_size 10M;
 
+    server_name geoconect.ru www.geoconect.ru;
+
     location /api {
       proxy_pass http://node:5000;
       proxy_http_version 1.1;
@@ -47,6 +49,9 @@ http {
       proxy_set_header X-Forwarded-For $remote_addr;
     }
 
-
+    location ~ /.well-known/acme-challenge {
+      allow all;
+      root /var/www/html;
+    }
   }
 }
